2007-05-07  Aaron Bockover  <abockover@novell.com>
    * src/TagLib/TagLib.sources: Added a separate file to define what sources
    to build so that applications bundling TagLib don't have to worry about
    keeping the list in sync - they can just include the file in their build

    * src/Makefile.am: Include TagLib/TagLib.sources

    * docs/Makefile.am: Added an empty/stub file to fix the build for now


svn path=/trunk/taglib-sharp/; revision=76954

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,123 +4,7 @@ TARGET = $(ASSEMBLY)
 
 CSC = $(MCS) $(MCS_FLAGS) $(CSFLAGS)
 
-TAGLIB_CSFILES =                                                   \
-   $(srcdir)/TagLib/Ape/Tag.cs                                     \
-   $(srcdir)/TagLib/Ape/Item.cs                                    \
-   $(srcdir)/TagLib/Ape/Footer.cs                                  \
-   $(srcdir)/TagLib/Asf/Guid.cs                                    \
-   $(srcdir)/TagLib/Asf/StreamPropertiesObject.cs                  \
-   $(srcdir)/TagLib/Asf/UnknownObject.cs                           \
-   $(srcdir)/TagLib/Asf/Tag.cs                                     \
-   $(srcdir)/TagLib/Asf/Object.cs                                  \
-   $(srcdir)/TagLib/Asf/ExtendedContentDescriptionObject.cs        \
-   $(srcdir)/TagLib/Asf/ContentDescriptionObject.cs                \
-   $(srcdir)/TagLib/Asf/HeaderObject.cs                            \
-   $(srcdir)/TagLib/Asf/File.cs                                    \
-   $(srcdir)/TagLib/Asf/FilePropertiesObject.cs                    \
-   $(srcdir)/TagLib/Asf/PaddingObject.cs                           \
-   $(srcdir)/TagLib/Asf/ContentDescriptor.cs                       \
-   $(srcdir)/TagLib/Mpc/StreamHeader.cs                              \
-   $(srcdir)/TagLib/Mpc/File.cs                                    \
-   $(srcdir)/TagLib/Ogg/GroupedComment.cs                                    \
-   $(srcdir)/TagLib/Ogg/Bitstream.cs                                    \
-   $(srcdir)/TagLib/Ogg/Paginator.cs                                    \
-   $(srcdir)/TagLib/Ogg/Codec.cs                                    \
-   $(srcdir)/TagLib/Ogg/Codecs/Vorbis.cs                                    \
-   $(srcdir)/TagLib/Ogg/Codecs/Theora.cs                                    \
-   $(srcdir)/TagLib/Ogg/Page.cs                                    \
-   $(srcdir)/TagLib/Ogg/XiphComment.cs                             \
-   $(srcdir)/TagLib/Ogg/PageHeader.cs                              \
-   $(srcdir)/TagLib/Ogg/File.cs                                    \
-   $(srcdir)/TagLib/Flac/Block.cs                                  \
-   $(srcdir)/TagLib/Flac/BlockHeader.cs                            \
-   $(srcdir)/TagLib/Flac/StreamHeader.cs                             \
-   $(srcdir)/TagLib/Flac/Picture.cs                                \
-   $(srcdir)/TagLib/Flac/File.cs                                   \
-   $(srcdir)/TagLib/Mpeg/XingHeader.cs                             \
-   $(srcdir)/TagLib/Mpeg/File.cs                                   \
-   $(srcdir)/TagLib/Mpeg/AudioFile.cs                              \
-   $(srcdir)/TagLib/Mpeg/AudioHeader.cs                            \
-   $(srcdir)/TagLib/Mpeg/VideoHeader.cs                            \
-   $(srcdir)/TagLib/NonContainer/EndTag.cs                         \
-   $(srcdir)/TagLib/NonContainer/File.cs                           \
-   $(srcdir)/TagLib/NonContainer/StartTag.cs                       \
-   $(srcdir)/TagLib/NonContainer/Tag.cs                            \
-   $(srcdir)/TagLib/Id3v1/Tag.cs                                   \
-   $(srcdir)/TagLib/Id3v1/StringHandler.cs                         \
-   $(srcdir)/TagLib/Id3v2/Frames/PrivateFrame.cs                   \
-   $(srcdir)/TagLib/Id3v2/Frames/RelativeVolumeFrame.cs            \
-   $(srcdir)/TagLib/Id3v2/Frames/UniqueFileIdentifierFrame.cs      \
-   $(srcdir)/TagLib/Id3v2/Frames/UnknownFrame.cs                   \
-   $(srcdir)/TagLib/Id3v2/Frames/CommentsFrame.cs                  \
-   $(srcdir)/TagLib/Id3v2/Frames/TextIdentificationFrame.cs        \
-   $(srcdir)/TagLib/Id3v2/Frames/AttachedPictureFrame.cs           \
-   $(srcdir)/TagLib/Id3v2/Frames/GeneralEncapsulatedObjectFrame.cs \
-   $(srcdir)/TagLib/Id3v2/Frames/UnsynchronisedLyricsFrame.cs      \
-   $(srcdir)/TagLib/Id3v2/FrameFactory.cs                          \
-   $(srcdir)/TagLib/Id3v2/Frame.cs                                 \
-   $(srcdir)/TagLib/Id3v2/Tag.cs                                   \
-   $(srcdir)/TagLib/Id3v2/FrameHeader.cs                           \
-   $(srcdir)/TagLib/Id3v2/ExtendedHeader.cs                        \
-   $(srcdir)/TagLib/Id3v2/SynchData.cs                             \
-   $(srcdir)/TagLib/Id3v2/Header.cs                                \
-   $(srcdir)/TagLib/Id3v2/Footer.cs                                \
-   $(srcdir)/TagLib/Mpeg4/AppleTag.cs                              \
-   $(srcdir)/TagLib/Mpeg4/Box.cs                                   \
-   $(srcdir)/TagLib/Mpeg4/BoxFactory.cs                            \
-   $(srcdir)/TagLib/Mpeg4/BoxHeader.cs                             \
-   $(srcdir)/TagLib/Mpeg4/BoxList.cs                               \
-   $(srcdir)/TagLib/Mpeg4/BoxTypes.cs                              \
-   $(srcdir)/TagLib/Mpeg4/File.cs                                  \
-   $(srcdir)/TagLib/Mpeg4/FileParser.cs                            \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoFreeSpaceBox.cs                 \
-   $(srcdir)/TagLib/Mpeg4/Boxes/UnknownBox.cs                      \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoUserDataBox.cs                  \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoChunkOffsetBox.cs               \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoChunkLargeOffsetBox.cs          \
-   $(srcdir)/TagLib/Mpeg4/Boxes/AppleItemListBox.cs                \
-   $(srcdir)/TagLib/Mpeg4/Boxes/AppleAnnotationBox.cs              \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoSampleTableBox.cs               \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoSampleEntry.cs                  \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoAudioSampleEntry.cs             \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoVisualSampleEntry.cs            \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoMetaBox.cs                      \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoSampleDescriptionBox.cs         \
-   $(srcdir)/TagLib/Mpeg4/Boxes/AppleAdditionalInfoBox.cs          \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoHandlerBox.cs                   \
-   $(srcdir)/TagLib/Mpeg4/Boxes/IsoMovieHeaderBox.cs               \
-   $(srcdir)/TagLib/Mpeg4/Boxes/FullBox.cs                         \
-   $(srcdir)/TagLib/Mpeg4/Boxes/AppleElementaryStreamDescriptor.cs \
-   $(srcdir)/TagLib/Mpeg4/Boxes/AppleDataBox.cs                    \
-   $(srcdir)/TagLib/Riff/AviHeaderList.cs                          \
-   $(srcdir)/TagLib/Riff/AviStream.cs                          \
-   $(srcdir)/TagLib/Riff/WaveFormatEx.cs                          \
-   $(srcdir)/TagLib/Riff/BitmapInfoHeader.cs                          \
-   $(srcdir)/TagLib/Riff/DivXTag.cs                                \
-   $(srcdir)/TagLib/Riff/File.cs                                   \
-   $(srcdir)/TagLib/Riff/InfoTag.cs                                \
-   $(srcdir)/TagLib/Riff/List.cs                                   \
-   $(srcdir)/TagLib/Riff/ListTag.cs                                \
-   $(srcdir)/TagLib/Riff/MovieIdTag.cs                             \
-   $(srcdir)/TagLib/WavPack/File.cs                                \
-   $(srcdir)/TagLib/WavPack/StreamHeader.cs                          \
-   $(srcdir)/TagLib/ICodec.cs                                     \
-   $(srcdir)/TagLib/IntList.cs                                     \
-   $(srcdir)/TagLib/Tag.cs                                         \
-   $(srcdir)/TagLib/ByteVectorList.cs                              \
-   $(srcdir)/TagLib/ByteVector.cs                                  \
-   $(srcdir)/TagLib/CombinedTag.cs                                 \
-   $(srcdir)/TagLib/Debugger.cs                                    \
-   $(srcdir)/TagLib/Genres.cs                                      \
-   $(srcdir)/TagLib/Properties.cs                                  \
-   $(srcdir)/TagLib/File.cs                                        \
-   $(srcdir)/TagLib/StringList.cs                                  \
-   $(srcdir)/TagLib/SupportedMimeType.cs                           \
-   $(srcdir)/TagLib/UnsupportedFormatException.cs                  \
-   $(srcdir)/TagLib/Picture.cs                                     \
-   $(srcdir)/TagLib/ListBase.cs                                    \
-   $(srcdir)/TagLib/FileTypes.cs                                   \
-   $(srcdir)/TagLib/CorruptFileException.cs
+include $(srcdir)/TagLib/TagLib.sources
 
 taglib-sharp.snk: $(top_srcdir)/taglib-sharp.snk
 	cp $(top_srcdir)/taglib-sharp.snk .
