2007-05-14  Brian Nickel <brian.nickel@gmail.com>
Feature Request: http://forum.taglib-sharp.com/viewtopic.php?f=4&t=12

	* src/TagLib/File.cs: Support pushing and poping file abstractors.
	* src/TagLib/Id3v2/Frames/UnsynchronisedLyricsFrame.cs:
	* src/TagLib/Id3v2/Frames/CommentsFrame.cs:
	* src/TagLib/Id3v2/Tag.cs: Be a little bit smarter when storing lyrics
	and comments. GetPreferred shouldn't be used for storing, because we
	want to store in exactly what we want, not a best guess.
	* src/TagLib/Id3v2/FrameFactory.cs:
	* src/TagLib/Id3v2/Frames/SynchronizedLyricsFrame.cs: Support
	synchronized lyrics.
	* src/TagLib/TagLib.sources:
	* src/taglib-sharp.mdp:
	* taglib-sharp.csproj: Added file.

svn path=/trunk/taglib-sharp/; revision=77388

--- a/taglib-sharp.csproj
+++ b/taglib-sharp.csproj
@@ -112,6 +112,7 @@
     <Compile Include="src\TagLib\Id3v2\Frames\TextIdentificationFrame.cs" />
     <Compile Include="src\TagLib\Id3v2\Frames\UniqueFileIdentifierFrame.cs" />
     <Compile Include="src\TagLib\Id3v2\Frames\UnsynchronisedLyricsFrame.cs" />
+    <Compile Include="src\TagLib\Id3v2\Frames\SynchronisedLyricsFrame.cs" />
     <Compile Include="src\TagLib\Id3v1\StringHandler.cs" />
     <Compile Include="src\TagLib\Id3v1\Tag.cs" />
     <Compile Include="src\TagLib\Flac\Block.cs" />
