2007-05-25  Brian Nickel <brian.nickel@gmail.com>
	+-------------+
	| VERSON BUMP |
	|  1.9.99994  |
	+-------------+

	* src/TagLib/TagLib.sources: Remove debugger.
	* src/TagLib/Mpeg/AudioHeader.cs: Compile on Windows.
	* docs/en/TagLib.Riff/File.xml:
	* docs/en/TagLib.Mpeg/AudioFile.xml:
	* docs/en/TagLib.Mpeg/File.xml:
	* docs/en/TagLib.WavPack/File.xml:
	* docs/en/index.xml:
	* docs/en/TagLib.Flac/File.xml:
	* docs/en/TagLib.MusePack/File.xml:
	* docs/en/TagLib.Asf/File.xml:
	* docs/en/TagLib.Ogg/File.xml:
	* docs/en/TagLib.Mpeg4/File.xml: Fixed tpos.
	* docs/Makefile.am: Change target.
	* configure.ac: Version bump.
	* taglib-sharp.csproj: Add missing files.

svn path=/trunk/taglib-sharp/; revision=77970

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -32,7 +32,7 @@ taglib-sharp-docs.zip taglib-sharp-docs.tree: $(srcdir)/en/*/*.xml $(srcdir)/en/
 	$(DOC_ASSEMBLER) $(srcdir)/en
 
 install-data-hook:
-	$(MONO) $(top_builddir)/docs/MonodocNodeConfig.exe --insert "TagLib Libraries" classlib-taglib-sharp $(DOCDIR)/../monodoc.xml
+	$(MONO) $(top_builddir)/docs/MonodocNodeConfig.exe --insert "TagLib#" classlib-taglib-sharp $(DOCDIR)/../monodoc.xml
 
 uninstall-hook:
 	$(MONO) $(top_builddir)/docs/MonodocNodeConfig.exe --remove classlib-taglib-sharp $(DOCDIR)/../monodoc.xml
