2007-06-01  Brian Nickel <brian.nickel@gmail.com>
	+-------------+
	| VERSON BUMP |
	|  1.9.99995  |
	+-------------+

	* examples/SetPictures.cs: Fix for API changes.
	* src/TagLib/ByteVector.cs:
	* src/TagLib/Mpeg4/AppleTag.cs:
	* src/TagLib/Mpeg4/BoxTypes.cs:
	* src/TagLib/TagLib.sources:
	* src/TagLib/ReadOnlyByteVector.cs:
	* src/taglib-sharp.mdp:
	* docs/en/TagLib/ReadOnlyByteVector.xml:
	* docs/en/TagLib/ByteVector.xml:
	* docs/en/index.xml:
	* docs/en/TagLib.Mpeg4/BoxTypes.xml:
	* taglib-sharp.csproj: Add immutable ReadOnlyByteVector.

svn path=/trunk/taglib-sharp/; revision=78468

--- a/taglib-sharp.csproj
+++ b/taglib-sharp.csproj
@@ -43,6 +43,7 @@
     <Compile Include="src\AssemblyInfo-windows.cs" />
     <Compile Include="src\TagLib\Tag.cs" />
     <Compile Include="src\TagLib\ByteVector.cs" />
+    <Compile Include="src\TagLib\ReadOnlyByteVector.cs" />
     <Compile Include="src\TagLib\ByteVectorList.cs" />
     <Compile Include="src\TagLib\CombinedTag.cs" />
     <Compile Include="src\TagLib\File.cs" />
