2007-06-07  Brian Nickel <brian.nickel@gmail.com>
	* src/TagLib/CombinedTag.cs: Add Tag.Clear, Tag.IsEmpty
	* src/TagLib/Id3v1/Tag.cs: Add Tag.Clear, Tag.IsEmpty
	* src/TagLib/Riff/File.cs: Use ReadOnlyByteVector.
	* src/TagLib/Riff/DivXTag.cs: Add Tag.Clear, Tag.IsEmpty
	* src/TagLib/Riff/ListTag.cs: Add Tag.Clear, Tag.IsEmpty
	* src/TagLib/Id3v2/Tag.cs:
	* src/TagLib/Id3v2/Footer.cs:
	* src/TagLib/Id3v2/FrameTypes.cs:
	* src/TagLib/Id3v2/FrameFactory.cs:
	* src/TagLib/Id3v2/FrameHeader.cs:
	* src/TagLib/Id3v2/Header.cs:
	* src/TagLib/Id3v2/Frames/UnsynchronisedLyricsFrame.cs:
	* src/TagLib/Id3v2/Frames/RelativeVolumeFrame.cs:
	* src/TagLib/Id3v2/Frames/CommentsFrame.cs:
	* src/TagLib/Id3v2/Frames/SynchronizedLyricsFrame.cs:
	* src/TagLib/Id3v2/Frames/AttachedPictureFrame.cs:
	* src/TagLib/Id3v2/Frames/UniqueFileIdentifierFrame.cs:
	* src/TagLib/Id3v2/Frames/PrivateFrame.cs:
	* src/TagLib/Id3v2/Frames/MusicCdIdentifierFrame.cs:
	* src/TagLib/Id3v2/Frames/TermsOfUseFrame.cs:
	* src/TagLib/Id3v2/Frames/GeneralEncapsulatedObjectFrame.cs:
	* src/TagLib/Id3v2/Frames/TextIdentificationFrame.cs:
	* src/TagLib/Id3v2/Frames/PlayCountFrame.cs:
	* src/TagLib/Id3v2/Frame.cs: Use TagLib.Id3v2.FrameType instead of hard-
	coding. Cuts out a lot of read time.
	* src/TagLib/Flac/File.cs: Use ReadOnlyByteVector.
	* src/TagLib/Flac/Block.cs: BlockSize instead of Size.
	* src/TagLib/Ape/Tag.cs: Add Tag.Clear, Tag.IsEmpty
	* src/TagLib/Ape/Footer.cs: Use ReadOnlyByteVector.
	* src/TagLib/Ape/Item.cs: Use ReadOnlyByteVector.
	* src/TagLib/Mpeg4/Boxes/AppleAdditionalInfoBox.cs:Don't parse text
	before its needed.
	* src/TagLib/Mpeg4/Boxes/IsoMovieHeaderBox.cs:
	* src/TagLib/Mpeg4/Boxes/IsoChunkLargeOffsetBox.cs:
	* src/TagLib/Mpeg4/Boxes/AppleElementaryStreamDescriptor.cs:
	* src/TagLib/Mpeg4/Boxes/IsoChunkOffsetBox.cs:
	* src/TagLib/Mpeg4/Boxes/IsoSampleDescriptionBox.cs: Don't do extra seeks.
	* src/TagLib/Mpeg4/FileParser.cs: Use do/while instead of for. Was doing
	extra reading.
	* s

--- a/taglib-sharp.csproj
+++ b/taglib-sharp.csproj
@@ -47,7 +47,6 @@
     <Compile Include="src\TagLib\ByteVectorList.cs" />
     <Compile Include="src\TagLib\CombinedTag.cs" />
     <Compile Include="src\TagLib\File.cs" />
-    <Compile Include="src\TagLib\IntList.cs" />
     <Compile Include="src\TagLib\StringList.cs" />
     <Compile Include="src\TagLib\SupportedMimeType.cs" />
     <Compile Include="src\TagLib\UnsupportedFormatException.cs" />
@@ -60,7 +59,6 @@
     <Compile Include="src\TagLib\Mpeg4\AppleTag.cs" />
     <Compile Include="src\TagLib\Mpeg4\BoxHeader.cs" />
     <Compile Include="src\TagLib\Mpeg4\BoxFactory.cs" />
-    <Compile Include="src\TagLib\Mpeg4\BoxList.cs" />
     <Compile Include="src\TagLib\Mpeg4\Box.cs" />
     <Compile Include="src\TagLib\Mpeg4\FileParser.cs" />
     <Compile Include="src\TagLib\Mpeg4\BoxTypes.cs" />
@@ -98,6 +96,7 @@
     <Compile Include="src\TagLib\Id3v2\ExtendedHeader.cs" />
     <Compile Include="src\TagLib\Id3v2\Footer.cs" />
     <Compile Include="src\TagLib\Id3v2\Frame.cs" />
+    <Compile Include="src\TagLib\Id3v2\FrameTypes.cs" />
     <Compile Include="src\TagLib\Id3v2\FrameFactory.cs" />
     <Compile Include="src\TagLib\Id3v2\FrameHeader.cs" />
     <Compile Include="src\TagLib\Id3v2\Header.cs" />
