2007-06-24  Brian Nickel <brian.nickel@gmail.com>
	+-------------+
	| VERSON BUMP |
	|    2.0.1    |
	+-------------+
	
	* src/AssemblyInfo.cs.in:
	* configure.ac:
	* src/Makefile.am:
	* src/policy.2.0.taglib-sharp.config.in: Install a policy in GAC so
	assemblies compiled against older versions use 2.0.1.0.
	* src/AssemblyInfo-windows.cs: Version bump.
	* NEWS: Information on new release.

svn path=/trunk/taglib-sharp/; revision=80664

--- a/src/AssemblyInfo.cs.in
+++ b/src/AssemblyInfo.cs.in
@@ -22,7 +22,7 @@
 using System.Reflection;
 using System.Runtime.CompilerServices;
 
-[assembly:AssemblyVersion("@ASM_VERSION@")]
+[assembly:AssemblyVersion("@ASSEMBLY_VERSION@")]
 [assembly:AssemblyTitle ("TagLib#")]
 [assembly:AssemblyDescription ("A library for reading and writing audio metatags.")]
 [assembly:AssemblyCopyright ("Copyright (c) 2006-2007 Brian Nickel")]
