--- a/configure.ac
+++ b/configure.ac
@@ -3,11 +3,13 @@ AC_CANONICAL_SYSTEM
 
 ASSEMBLY_NAME="taglib-sharp"
 
-MAJOR_VERSION=2
-MINOR_VERSION=0
-PATCH_VERSION=1
-VERSION="$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION"
-ASSEMBLY_VERSION="$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION.0"
+if test -d .svn; then
+	svn info ChangeLog |grep Revision: |cut --bytes=11- > svn-revision
+fi
+SVN_REVISION=$(cat svn-revision)
+
+VERSION="2.0.1"
+ASSEMBLY_VERSION="$VERSION.$SVN_REVISION"
 
 
 POLICY_2_0_VERSIONS="2.0.0.0-$ASSEMBLY_VERSION"
