2007-07-03  Brian Nickel <brian.nickel@gmail.com>
	+-------------+
	| VERSON BUMP |
	|    2.0.2    |
	+-------------+
	
	* src/TagLib/Id3v2/Frames/MusicCdIdentifierFrame.cs: Fix docs.
	* src/TagLib/File.cs: Some doc work.
	* src/AssemblyInfo.cs.in: Conditionally sign the assembly.
	* src/AssemblyInfo-windows.cs: DELETED. AssemblyInfo.cs.in is all that's
	necessary.
	* src/Makefile.am: Add distwin target
	
	* windows-files/TagLibSharpDocs.chm: Added.
	
	* configure.ac: Don't use svn revision because it is greater than
	ushort.MaxValue.
	
	* Makefile.am: Add distwin target.
	
	* NEWS: Updated for new release.
	
	* src/taglib-sharp.mdp:
	* taglib-sharp.csproj: Use AssemblyInfo.cs.

svn path=/trunk/taglib-sharp/; revision=81300

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,8 +10,7 @@ pkgconfig_DATA = $(pkgconfig_in_files:.pc.in=.pc)
 EXTRA_DIST =             \
    $(pkgconfig_in_files) \
    taglib-sharp.snk \
-   taglib-sharp.csproj \
-   svn-revision
+   taglib-sharp.csproj
 
 DISTCLEANFILES = taglib-sharp.pc
 
@@ -30,4 +29,15 @@ MAINTAINERCLEANFILES = \
 	config.guess \
 	mkinstalldirs
 
-
+distwin: all
+	mkdir -p $(srcdir)/$(WINDIR)
+	cp $(srcdir)/NEWS $(srcdir)/$(WINDIR)/NEWS.txt
+	cp $(srcdir)/ChangeLog $(srcdir)/$(WINDIR)/ChangeLog.txt
+	cp $(srcdir)/COPYING $(srcdir)/$(WINDIR)/COPYING.txt
+	cp $(srcdir)/taglib-sharp.csproj $(srcdir)/$(WINDIR)/taglib-sharp.csproj
+	if [ -e $(srcdir)/windows-files ];					\
+	  then cp -r $(srcdir)/windows-files/* $(srcdir)/$(WINDIR);		\
+	fi
+	cd $(srcdir)/src && make distwin
+	zip -9 -r $(srcdir)/$(WINDIR).zip $(srcdir)/$(WINDIR)
+	rm -rf $(srcdir)/$(WINDIR)
