--- a/src/AssemblyInfo.cs.in
+++ b/src/AssemblyInfo.cs.in
@@ -30,5 +30,7 @@ using System.Runtime.InteropServices;
 [assembly:AssemblyCopyright ("Copyright (c) 2006-2007 Brian Nickel")]
 [assembly:AssemblyCompany ("")]
 [assembly:AssemblyDelaySign(false)]
+#if SIGN
 [assembly:AssemblyKeyFile("taglib-sharp.snk")]
+#endif
 [assembly:CLSCompliant(false)]
