--- a/taglib-sharp.csproj
+++ b/taglib-sharp.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\AssemblyInfo-windows.cs" />
+    <Compile Include="src\AssemblyInfo.cs" />
     <Compile Include="src\TagLib\Tag.cs" />
     <Compile Include="src\TagLib\ByteVector.cs" />
     <Compile Include="src\TagLib\ReadOnlyByteVector.cs" />
